--- a/DiscordNight.css
+++ b/DiscordNight.css
@@ -21,11 +21,11 @@
 	--Channel-List-Active-Threads: flex;				/* flex = ON, none = OFF */
 	--Channel-List-Upcoming-Events: flex;				/* flex = ON, none = OFF */
 	--Channel-List-Boost-Goal: block;					/* block = ON, none = OFF */
-	--Channel-List-Width: 200px;						/* 200px, Discord default = 240px */
+	--Channel-List-Width: 240px;						/* 200px, Discord default = 240px */
 	
-	--User-List-Width: 200px;							/* 200px, Discord default = 240px */
-	--User-Popout-Width: 236px;							/* 236px, Discord default = 300px */
-	--User-Status-Popout-Width: var(--User-Popout-Width);/* 236px, Discord default = 300px */
+	--User-List-Width: 240px;							/* 200px, Discord default = 240px */
+	--User-Popout-Width: 300px;							/* 236px, Discord default = 300px */
+	--User-Status-Popout-Width: var(--User-Popout-Width);/* 300px, Discord default = 300px */
 	
 	--Search-List-Width: 488px;							/* 488px, Discord default = 418px */
 	--Inbox-List-Width: 522px;							/* 522px, Discord default = 480px */
@@ -33,12 +33,12 @@
 	--Emoji-Menu-Height: 618px;							/* 618px or 498px, Discord default = 444px */
 	
 	--Chatbox-Gift-Button: none;						/* flex = ON, none = OFF */
-	--Chatbox-GIF-Button: none;							/* flex = ON, none = OFF */
+	--Chatbox-GIF-Button: flex;							/* flex = ON, none = OFF */
 	--Chatbox-Stickers-Button: none;					/* flex = ON, none = OFF */
 	
 	--Chat-Emoji-Size: 1.75rem;							/* 1.75rem, Discord default = 1.375rem */
-	--Chat-Emoji-Large-Size: 2rem;						/* 2rem, Discord default = 3rem */
-	--Chat-Sticker-Size: 5rem;							/* 5rem, Discord default = 10rem */
+	--Chat-Emoji-Large-Size: 3rem;						/* 2rem, Discord default = 3rem */
+	--Chat-Sticker-Size: 10rem;							/* 5rem, Discord default = 10rem */
 	--Chat-Wave-To-New-User-Button: flex;				/* flex = ON, none = OFF */
 	--Chat-Wave-To-New-DM-Button: flex;					/* flex = ON, none = OFF */
 	
@@ -52,7 +52,7 @@
 	
 	--Home-Store-Button: none;							/* block = ON, none = OFF */
 	--Home-Direct-Messages-Header: flex;				/* flex = ON, none = OFF */
-	--Home-Close-DM-Button: block;						/* block = ON, none = OFF */
+	--Home-Close-DM-Button: nose;						/* block = ON, none = OFF */
 	--Friends-List-Searchbar: none;						/* flex = ON, none = OFF */
 	
 	--Titlebar-Help-Icon: none;							/* flex = ON, none = OFF */
